--- a/dashboard/webapp/templates/webapp/index.html
+++ b/dashboard/webapp/templates/webapp/index.html
@@ -2,7 +2,7 @@
 {% load humanize %}
 
 {% block header %}
-<link rel="stylesheet" href="/static//scss/inc/widgets/_quick-stats.scss">
+<link rel="stylesheet" href="/static/scss/inc/widgets/_quick-stats.scss">
 {% endblock %}
 
 {% block content %}
@@ -60,6 +60,10 @@
 <br>
 <!-- /Break line -->
 
+<!-- Profit chart -->
+<div id="container" style="width:100%; height:400px;"></div>
+<!-- /Profit chart -->
+
 {% endblock %}
 
 {% block footer %}
@@ -77,4 +81,236 @@
 {% block scripts %}
 <script src="/static/demo/js/other-charts.js"></script>
 <script src="/static/vendors/bower_components/peity/jquery.peity.min.js"></script>
+
+<!-- Highcharts -->
+<script src="/static/highcharts/highcharts.js"></script>
+<script src="/static/highcharts/themes/dark-unica.js"></script>
+<script src="/static/highstock/modules/stock.js"></script>
+<script src="/static/highstock/themes/dark-unica.js"></script>
+<!-- /Highcharts -->
+
+<!-- Demo data -->
+<script src="/static/js/demo_data.js"></script>
+<!-- /Demo data -->
+
+<!-- Profit chart -->
+<script type="text/javascript">
+Highcharts.theme = {
+    colors:"#2b908f #90ee7e #f45b5b #7798BF #aaeeee #ff0066 #eeaaee #55BF3B #DF5353 #7798BF #aaeeee".split(" "),
+    chart: {
+        backgroundColor: 'rgba(0, 0, 0, 0.20)',
+        style: {
+            fontFamily: "'Unica One', sans-serif"
+        },
+        plotBorderColor:"#606063"
+    },
+    title: {
+        style: {
+            color: "#E0E0E3",
+            textTransform: "uppercase",
+            fontSize: "20px"
+        }
+    },
+    subtitle: {
+        style: {
+            color: "#E0E0E3",
+            textTransform: "uppercase"
+        }
+    },
+    xAxis: {
+        gridLineColor:"#707073",
+        labels: {
+            style: {
+                color: "#E0E0E3"
+            }
+        },
+        lineColor:"#707073",
+        minorGridLineColor:"#505053",
+        tickColor:"#707073",
+        title: {
+            style: {
+                color: "#A0A0A3"
+            }
+        }
+    },
+    yAxis: {
+        gridLineColor:"#707073",
+        labels: {
+            style: {
+                color: "#E0E0E3"
+            }
+        },
+        lineColor:"#707073",
+        minorGridLineColor:"#505053",
+        tickColor:"#707073",
+        tickWidth:1,
+        title: {
+            style: {
+                color: "#A0A0A3"
+            }
+        }
+    },
+    tooltip: {
+        backgroundColor:"rgba(0, 0, 0, 0.85)",
+        style: {
+            color: "#F0F0F0"
+        }
+    },
+    plotOptions: {
+        series: {
+            dataLabels: {
+                color: "#B0B0B3"
+            },
+            marker: {
+                lineColor: "#333"
+            }
+        },
+        boxplot: {
+            fillColor: "#505053"
+        },
+        candlestick: {
+            lineColor: "white"
+        },
+        errorbar: {
+            color: "white"
+        }
+    },
+    legend: {
+        itemStyle: {
+            color: "#E0E0E3"
+        },
+        itemHoverStyle: {
+            color: "#FFF"
+        },
+        itemHiddenStyle: {
+            color: "#606063"
+        }
+    },
+    credits: {
+        style: {
+            color: "#666"
+        }
+    },
+    labels: {
+        style: {
+            color: "#707073"
+        }
+    },
+    drilldown: {
+        activeAxisLabelStyle: {
+            color: "#F0F0F3"
+        },
+        activeDataLabelStyle: {
+            color: "#F0F0F3"
+        }
+    },
+    navigation: {
+        buttonOptions: {
+            symbolStroke:"#DDDDDD",
+            theme: {
+                fill: "#505053"
+            }
+        }
+    },
+    rangeSelector: {
+        buttonTheme: {
+            fill:"#505053",
+            stroke:"#000000",
+            style: {
+                color: "#CCC"
+            },
+            states: {
+                hover: {
+                    fill:"#707073",
+                    stroke:"#000000",
+                    style: {
+                        color: "white"
+                    }
+                },
+                select: {
+                    fill:"#000003",
+                    stroke:"#000000",
+                    style: {
+                        color: "white"
+                    }
+                }
+            }
+        },
+        inputBoxBorderColor:"#505053",
+        inputStyle: {
+            backgroundColor: "#333",
+            color: "silver"
+        },
+        labelStyle: {
+            color: "silver"
+        }
+    },
+    navigator: {
+        handles: {
+            backgroundColor: "#666",
+            borderColor: "#AAA"
+        },
+        outlineColor:"#CCC",
+        maskFill:"rgba(255,255,255,0.1)",
+        series: {
+            color: "#7798BF",
+            lineColor: "#A6C7ED"
+        },
+        xAxis: {
+            gridLineColor: "#505053"
+        }
+    },
+    scrollbar: {
+        barBackgroundColor: "#808083",
+        barBorderColor: "#808083",
+        buttonArrowColor: "#CCC",
+        buttonBackgroundColor: "#606063",
+        buttonBorderColor: "#606063",
+        rifleColor: "#FFF",
+        trackBackgroundColor: "#404043",
+        trackBorderColor: "#404043"
+    },
+    legendBackgroundColor:"rgba(0, 0, 0, 0.5)",
+    background2:"#505053",
+    dataLabelsColor:"#B0B0B3",
+    textColor:"#C0C0C0",
+    contrastTextColor:"#F0F0F3",
+    maskColor:"rgba(255,255,255,0.3)"
+};
+
+$(function (data) {
+    // create the chart
+    Highcharts.stockChart('container', {
+        chart: {
+            alignTicks: false
+        },
+
+        rangeSelector: {
+            selected: 1
+        },
+
+        title: {
+            text: 'AIOFlipper Profit Visualisation'
+        },
+
+        series: [{
+            type: 'column',
+            name: 'Profit',
+            data: demo_data,
+            dataGrouping: {
+                units: [[
+                    'week', // unit name
+                    [1] // allowed multiples
+                ], [
+                    'month',
+                    [1, 2, 3, 4, 6]
+                ]]
+            }
+        }]
+    });
+});
+
+Highcharts.setOptions(Highcharts.theme);
+</script>
+<!-- /Profit chart -->
 {% endblock %}
