--- a/dashboard/webapp/templates/webapp/base.html
+++ b/dashboard/webapp/templates/webapp/base.html
@@ -42,7 +42,7 @@
                 </div>
 
                 <div class="logo hidden-sm-down">
-                    <h1><a href="index.html">Super Admin 2.0</a></h1>
+                    <h1><a href="index.html">AIOFlipper</a></h1>
                 </div>
 
                 <form class="search">
@@ -55,80 +55,8 @@
                 <ul class="top-nav">
                     <li class="hidden-xl-up"><a href="" data-sa-action="search-open"><i class="zmdi zmdi-search"></i></a></li>
 
-                    <li class="dropdown">
-                        <a href="" data-toggle="dropdown" class="top-nav__notify"><i class="zmdi zmdi-email"></i></a>
-                        <div class="dropdown-menu dropdown-menu-right dropdown-menu--block">
-                            <div class="dropdown-header">
-                                Messages
-
-                                <div class="actions">
-                                    <a href="messages.html" class="actions__item zmdi zmdi-plus"></a>
-                                </div>
-                            </div>
-
-                            <div class="listview listview--hover">
-                                <a href="" class="listview__item">
-                                    <img src="/static/demo/img/profile-pics/1.jpg" class="listview__img" alt="">
-
-                                    <div class="listview__content">
-                                        <div class="listview__heading">
-                                            David Belle <small>12:01 PM</small>
-                                        </div>
-                                        <p>Cum sociis natoque penatibus et magnis dis parturient montes</p>
-                                    </div>
-                                </a>
-
-                                <a href="" class="listview__item">
-                                    <img src="/static/demo/img/profile-pics/2.jpg" class="listview__img" alt="">
-
-                                    <div class="listview__content">
-                                        <div class="listview__heading">
-                                            Jonathan Morris
-                                            <small>02:45 PM</small>
-                                        </div>
-                                        <p>Nunc quis diam diamurabitur at dolor elementum, dictum turpis vel</p>
-                                    </div>
-                                </a>
-
-                                <a href="" class="listview__item">
-                                    <img src="/static/demo/img/profile-pics/3.jpg" class="listview__img" alt="">
-
-                                    <div class="listview__content">
-                                        <div class="listview__heading">
-                                            Fredric Mitchell Jr.
-                                            <small>08:21 PM</small>
-                                        </div>
-                                        <p>Phasellus a ante et est ornare accumsan at vel magnauis blandit turpis at augue ultricies</p>
-                                    </div>
-                                </a>
-
-                                <a href="" class="listview__item">
-                                    <img src="/static/demo/img/profile-pics/4.jpg" class="listview__img" alt="">
-
-                                    <div class="listview__content">
-                                        <div class="listview__heading">
-                                            Glenn Jecobs
-                                            <small>08:43 PM</small>
-                                        </div>
-                                        <p>Ut vitae lacus sem ellentesque maximus, nunc sit amet varius dignissim, dui est consectetur neque</p>
-                                    </div>
-                                </a>
-
-                                <a href="" class="listview__item">
-                                    <img src="/static/demo/img/profile-pics/5.jpg" class="listview__img" alt="">
-
-                                    <div class="listview__content">
-                                        <div class="listview__heading">
-                                            Bill Phillips
-                                            <small>11:32 PM</small>
-                                        </div>
-                                        <p>Proin laoreet commodo eros id faucibus. Donec ligula quam, imperdiet vel ante placerat</p>
-                                    </div>
-                                </a>
-
-                                <a href="" class="view-more">View all messages</a>
-                            </div>
-                        </div>
+                    <li class="dropdown hidden-xs-down">
+                        <a href=""><i class="zmdi zmdi-refresh"></i></a>
                     </li>
 
                     <li class="dropdown top-nav__notifications">
@@ -225,108 +153,7 @@
                     </li>
 
                     <li class="dropdown hidden-xs-down">
-                        <a href="" data-toggle="dropdown"><i class="zmdi zmdi-check-circle"></i></a>
-
-                        <div class="dropdown-menu dropdown-menu-right dropdown-menu--block" role="menu">
-                            <div class="dropdown-header">Tasks</div>
-
-                            <div class="listview listview--hover">
-                                <a href="" class="listview__item">
-                                    <div class="listview__content">
-                                        <div class="listview__heading">HTML5 Validation Report</div>
-
-                                        <div class="progress mt-1">
-                                            <div class="progress-bar bg-primary" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                        </div>
-                                    </div>
-                                </a>
-
-                                <a href="" class="listview__item">
-                                    <div class="listview__content">
-                                        <div class="listview__heading">Google Chrome Extension</div>
-
-                                        <div class="progress mt-1">
-                                            <div class="progress-bar bg-warning" style="width: 43%" aria-valuenow="43" aria-valuemin="0" aria-valuemax="100"></div>
-                                        </div>
-                                    </div>
-                                </a>
-
-                                <a href="" class="listview__item">
-                                    <div class="listview__content">
-                                        <div class="listview__heading">Social Intranet Projects</div>
-
-                                        <div class="progress mt-1">
-                                            <div class="progress-bar bg-success" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-                                        </div>
-                                    </div>
-                                </a>
-
-                                <a href="" class="listview__item">
-                                    <div class="listview__content">
-                                        <div class="listview__heading">Bootstrap Admin Template</div>
-
-                                        <div class="progress mt-1">
-                                            <div class="progress-bar bg-info" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                                        </div>
-                                    </div>
-                                </a>
-
-                                <a href="" class="listview__item">
-                                    <div class="listview__content">
-                                        <div class="listview__heading">Youtube Client App</div>
-
-                                        <div class="progress mt-1">
-                                            <div class="progress-bar bg-danger" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                                        </div>
-                                    </div>
-                                </a>
-
-                                <a href="" class="view-more">View all Tasks</a>
-                            </div>
-                        </div>
-                    </li>
-
-                    <li class="dropdown hidden-xs-down">
-                        <a href="" data-toggle="dropdown"><i class="zmdi zmdi-apps"></i></a>
-
-                        <div class="dropdown-menu dropdown-menu-right dropdown-menu--block" role="menu">
-                            <div class="row app-shortcuts">
-                                <a class="col-4 app-shortcuts__item" href="">
-                                    <i class="zmdi zmdi-calendar"></i>
-                                    <small class="">Calendar</small>
-                                </a>
-                                <a class="col-4 app-shortcuts__item" href="">
-                                    <i class="zmdi zmdi-file-text"></i>
-                                    <small class="">Files</small>
-                                </a>
-                                <a class="col-4 app-shortcuts__item" href="">
-                                    <i class="zmdi zmdi-email"></i>
-                                    <small class="">Email</small>
-                                </a>
-                                <a class="col-4 app-shortcuts__item" href="">
-                                    <i class="zmdi zmdi-trending-up"></i>
-                                    <small class="">Reports</small>
-                                </a>
-                                <a class="col-4 app-shortcuts__item" href="">
-                                    <i class="zmdi zmdi-view-headline"></i>
-                                    <small class="">News</small>
-                                </a>
-                                <a class="col-4 app-shortcuts__item" href="">
-                                    <i class="zmdi zmdi-image"></i>
-                                    <small class="">Gallery</small>
-                                </a>
-                            </div>
-                        </div>
-                    </li>
-
-                    <li class="dropdown hidden-xs-down">
-                        <a href="" data-toggle="dropdown"><i class="zmdi zmdi-more-vert"></i></a>
-
-                        <div class="dropdown-menu dropdown-menu-right">
-                            <a href="" class="dropdown-item" data-sa-action="fullscreen">Fullscreen</a>
-                            <a href="" class="dropdown-item">Clear Local Storage</a>
-                            <a href="" class="dropdown-item">Settings</a>
-                        </div>
+                        <a href="" data-sa-action="fullscreen"><i class="zmdi zmdi-fullscreen"></i></a>
                     </li>
 
                     <li class="hidden-xs-down">
@@ -367,7 +194,7 @@
                     </div>
 
                     <ul class="navigation">
-                        <li class="@@indexactive"><a href="index.html"><i class="zmdi zmdi-home"></i> Home</a></li>
+                        <li class="navigation__active"><a href="index.html"><i class="zmdi zmdi-home"></i> Home</a></li>
 
                         <li class="navigation__sub @@variantsactive">
                             <a href=""><i class="zmdi zmdi-view-week"></i> Variants</a>
@@ -452,7 +279,7 @@
 
                         <li class="@@photogalleryactive"><a href="photo-gallery.html"><i class="zmdi zmdi-image"></i> Photo Gallery</a></li>
 
-                        <li class="navigation__sub navigation__sub--active navigation__sub--toggled">
+                        <li class="navigation__sub @@samplepagesactive">
                             <a href=""><i class="zmdi zmdi-collection-item"></i> Sample Pages</a>
 
                             <ul>
@@ -476,7 +303,7 @@
                                 <li class="@@loginactive"><a href="login.html">Login & SignUp</a></li>
                                 <li class="@@lockscreenactive"><a href="lockscreen.html">Lockscreen</a></li>
                                 <li class="@@lockscreenactive"><a href="404.html">404</a></li>
-                                <li class="navigation__active"><a href="empty.html">Empty Page</a></li>
+                                <li class="@@emptyactive"><a href="empty.html">Empty Page</a></li>
                             </ul>
                         </li>
                     </ul>
