--- a/dashboard/webapp/templates/webapp/base.html
+++ b/dashboard/webapp/templates/webapp/base.html
@@ -14,6 +14,9 @@
         <!-- App styles -->
         <link rel="stylesheet" href="/static/css/app.css">
 
+        <!-- Custom styles -->
+        <link rel="stylesheet" href="/static/css/custom.css">
+
         <!-- Page specific css -->
         {% block header %}
         {% endblock %}
@@ -153,7 +156,7 @@
                     </li>
 
                     <li class="dropdown hidden-xs-down">
-                        <a href="" data-sa-action="fullscreen"><i class="zmdi zmdi-fullscreen"></i></a>
+                        <a id="fullscreen-toggle" href="" data-sa-action="fullscreen"><i class="zmdi zmdi-fullscreen"></i></a>
                     </li>
 
                     <li class="hidden-xs-down">
@@ -177,22 +180,6 @@
             <aside class="sidebar">
                 <div class="scrollbar-inner">
                    <!-- Sidebar Contents -->
-                   <div class="user">
-                        <div class="user__info" data-toggle="dropdown">
-                            <img class="user__img" src="/static/demo/img/profile-pics/8.jpg" alt="">
-                            <div>
-                                <div class="user__name">Malinda Hollaway</div>
-                                <div class="user__email">malinda-h@gmail.com</div>
-                            </div>
-                        </div>
-
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="">View Profile</a>
-                            <a class="dropdown-item" href="">Settings</a>
-                            <a class="dropdown-item" href="">Logout</a>
-                        </div>
-                    </div>
-
                     <ul class="navigation">
                         <li class="navigation__active"><a href="index.html"><i class="zmdi zmdi-home"></i> Home</a></li>
 
