Add header and search bar opacity fix

--- a/dashboard/webapp/templates/webapp/index.html
+++ b/dashboard/webapp/templates/webapp/index.html
@@ -153,7 +153,7 @@ Highcharts.chart('sales-chart', {
         zoomType: 'xy'
     },
     title: {
-        text: 'Item sales by category'
+        text: 'Item sales by Item'
     },
     subtitle: {
         text: 'Today',
@@ -219,274 +219,274 @@ Highcharts.chart('sales-chart', {
     series: [
         {
             name: 'Anima Core body of Seren',
-            color: 'rgba(223, 83, 83, 0.5)',
+            color: 'rgba(223, 83, 83, 0.7)',
             shape: 'callout',
             data: [[1, 200000], [1, 250000], [1, 25000], [1, 50000], [1, 350000]]
         },
         {
             name: 'Anima Core body of Sliske',
-            color: 'rgba(221, 84, 85, 0.5)',
+            color: 'rgba(221, 84, 85, 0.7)',
             shape: 'callout',
             data: [[2, 100000], [21, 100000], [21, 50000], [2, 250000], [2, 275000]]
         },
         {
             name: 'Anima Core body of Zamorak',
-            color: 'rgba(219, 85, 87, 0.5)',
+            color: 'rgba(219, 85, 87, 0.7)',
             data: [[3, 100000], [3, 100000], [3, 50000], [3, 250000], [3, 275000]]
         },
         {
             name: 'Anima Core Body of Zaros',
-            color: 'rgba(217, 86, 89, 0.5)',
+            color: 'rgba(217, 86, 89, 0.7)',
             data: [[4, 100000], [4, 100000], [4, 50000], [4, 250000], [4, 275000]]
         },
         {
             name: 'Anima Core helm of Seren',
-            color: 'rgba(215, 88, 91, 0.5)',
+            color: 'rgba(215, 88, 91, 0.7)',
             data: [[5, 100000], [5, 100000], [5, 50000], [5, 250000], [5, 275000]]
         },
         {
             name: 'Anima Core helm of Sliske',
-            color: 'rgba(213, 89, 93, 0.5)',
+            color: 'rgba(213, 89, 93, 0.7)',
             data: [[6, 100000], [6, 100000], [6, 50000], [6, 250000], [6, 275000]]
         },
         {
             name: 'Anima Core helm of Zamorak',
-            color: 'rgba(211, 90, 95, 0.5)',
+            color: 'rgba(211, 90, 95, 0.7)',
             data: [[7, 100000], [7, 100000], [7, 50000], [7, 250000], [7, 275000]]
         },
         {
             name: 'Anima Core helm of Zaros',
-            color: 'rgba(209, 92, 97, 0.5)',
+            color: 'rgba(209, 92, 97, 0.7)',
             data: [[8, 100000], [8, 100000], [8, 50000], [8, 250000], [8, 275000]]
         },
         {
             name: 'Anima Core legs of Seren',
-            color: 'rgba(207, 93, 99, 0.5)',
+            color: 'rgba(207, 93, 99, 0.7)',
             data: [[9, 100000], [9, 100000], [9, 50000], [9, 250000], [9, 275000]]
         },
         {
             name: 'Anima Core legs of Sliske',
-            color: 'rgba(205, 94, 101, 0.5)',
+            color: 'rgba(205, 94, 101, 0.7)',
             data: [[10, 100000], [10, 100000], [10, 50000], [10, 250000], [10, 275000]]
         },
         {
             name: 'Anima Core legs of Zamorak',
-            color: 'rgba(203, 96, 103, 0.5)',
+            color: 'rgba(203, 96, 103, 0.7)',
             data: [[11, 100000], [11, 100000], [11, 50000], [11, 250000], [11, 275000]]
         },
         {
             name: 'Anima Core Legs of Zaros',
-            color: 'rgba(201, 97, 105, 0.5)',
+            color: 'rgba(201, 97, 105, 0.7)',
             data: [[12, 100000], [12, 100000], [12, 50000], [12, 250000], [12, 275000]]
         },
         {
             name: 'Armadyl boots',
-            color: 'rgba(199, 98, 107, 0.5)',
+            color: 'rgba(199, 98, 107, 0.7)',
             data: [[13, 100000], [13, 100000], [13, 50000], [13, 250000], [13, 275000]]
         },
         {
             name: 'Armadyl buckler',
-            color: 'rgba(197, 99, 109, 0.5)',
+            color: 'rgba(197, 99, 109, 0.7)',
             data: [[14, 100000], [14, 100000], [14, 50000], [14, 250000], [14, 275000]]
         },
         {
             name: 'Armadyl chainskirt',
-            color: 'rgba(195, 101, 111, 0.5)',
+            color: 'rgba(195, 101, 111, 0.7)',
             data: [[15, 100000], [15, 100000], [15, 50000], [15, 250000], [15, 275000]]
         },
         {
             name: 'Armadyl chestplate',
-            color: 'rgba(193, 102, 113, 0.5)',
+            color: 'rgba(193, 102, 113, 0.7)',
             data: [[16, 100000], [16, 100000], [16, 50000], [16, 250000], [16, 275000]]
         },
         {
             name: 'Armadyl crossbow',
-            color: 'rgba(191, 103, 115, 0.5)',
+            color: 'rgba(191, 103, 115, 0.7)',
             data: [[17, 100000], [17, 100000], [17, 50000], [17, 250000], [17, 275000]]
         },
         {
             name: 'Armadyl gloves',
-            color: 'rgba(189, 105, 117, 0.5)',
+            color: 'rgba(189, 105, 117, 0.7)',
             data: [[18, 100000], [18, 100000], [18, 50000], [18, 250000], [18, 275000]]
         },
         {
             name: 'Armadyl helmet',
-            color: 'rgba(187, 106, 119, 0.5)',
+            color: 'rgba(187, 106, 119, 0.7)',
             data: [[19, 100000], [19, 100000], [19, 50000], [19, 250000], [19, 275000]]
         },
         {
             name: 'Bandos boots',
-            color: 'rgba(185, 107, 121, 0.5)',
+            color: 'rgba(185, 107, 121, 0.7)',
             data: [[20, 100000], [20, 100000], [20, 50000], [20, 250000], [20, 275000]]
         },
         {
             name: 'Bandos chestplate',
-            color: 'rgba(183, 109, 123, 0.5)',
+            color: 'rgba(183, 109, 123, 0.7)',
             data: [[21, 100000], [21, 100000], [21, 50000], [21, 250000], [21, 275000]]
         },
         {
             name: 'Bandos gloves',
-            color: 'rgba(181, 110, 125, 0.5)',
+            color: 'rgba(181, 110, 125, 0.7)',
             data: [[22, 100000], [22, 100000], [22, 50000], [22, 250000], [22, 275000]]
         },
         {
             name: 'Bandos helmet',
-            color: 'rgba(179, 111, 127, 0.5)',
+            color: 'rgba(179, 111, 127, 0.7)',
             data: [[23, 100000], [23, 100000], [23, 50000], [23, 250000], [23, 275000]]
         },
         {
             name: 'Bandos tassets',
-            color: 'rgba(177, 112, 129, 0.5)',
+            color: 'rgba(177, 112, 129, 0.7)',
             data: [[24, 100000], [24, 100000], [24, 50000], [24, 250000], [24, 275000]]
         },
         {
             name: 'Bandos warshield',
-            color: 'rgba(175, 114, 131, 0.5)',
+            color: 'rgba(175, 114, 131, 0.7)',
             data: [[25, 100000], [25, 100000], [25, 50000], [25, 250000], [25, 275000]]
         },
         {
             name: 'Blade of Avaryss',
-            color: 'rgba(173, 115, 133, 0.5)',
+            color: 'rgba(173, 115, 133, 0.7)',
             data: [[26, 100000], [26, 100000], [26, 50000], [26, 250000], [26, 275000]]
         },
         {
             name: 'Blade of Nymora',
-            color: 'rgba(171, 116, 135, 0.5)',
+            color: 'rgba(171, 116, 135, 0.7)',
             data: [[27, 100000], [27, 100000], [27, 50000], [27, 250000], [27, 275000]]
         },
         {
             name: 'Boots of subjugation',
-            color: 'rgba(170, 118, 138, 0.5)',
+            color: 'rgba(170, 118, 138, 0.7)',
             data: [[28, 100000], [28, 100000], [28, 50000], [28, 250000], [28, 275000]]
         },
         {
             name: 'Dragon Rider lance',
-            color: 'rgba(168, 119, 140, 0.5)',
+            color: 'rgba(168, 119, 140, 0.7)',
             data: [[29, 100000], [29, 100000], [29, 50000], [29, 250000], [29, 275000]]
         },
         {
             name: 'Garb of subjugation',
-            color: 'rgba(166, 120, 142, 0.5)',
+            color: 'rgba(166, 120, 142, 0.7)',
             data: [[30, 100000], [30, 100000], [30, 50000], [30, 250000], [30, 275000]]
         },
         {
             name: 'Gloves of subjugation',
-            color: 'rgba(164, 122, 144, 0.5)',
+            color: 'rgba(164, 122, 144, 0.7)',
             data: [[31, 100000], [31, 100000], [31, 50000], [31, 250000], [31, 275000]]
         },
         {
             name: 'Gown of subjugation',
-            color: 'rgba(162, 123, 146, 0.5)',
+            color: 'rgba(162, 123, 146, 0.7)',
             data: [[32, 100000], [32, 100000], [32, 50000], [32, 250000], [32, 275000]]
         },
         {
             name: 'Hood of subjugation',
-            color: 'rgba(160, 124, 148, 0.5)',
+            color: 'rgba(160, 124, 148, 0.7)',
             data: [[33, 100000], [33, 100000], [33, 50000], [33, 250000], [33, 275000]]
         },
         {
             name: 'Off-hand Armadyl crossbow',
-            color: 'rgba(158, 125, 150, 0.5)',
+            color: 'rgba(158, 125, 150, 0.7)',
             data: [[34, 100000], [34, 100000], [34, 50000], [34, 250000], [34, 275000]]
         },
         {
             name: 'Off-hand shadow glaive',
-            color: 'rgba(156, 127, 152, 0.5)',
+            color: 'rgba(156, 127, 152, 0.7)',
             data: [[35, 100000], [35, 100000], [35, 50000], [35, 250000], [35, 275000]]
         },
         {
             name: 'Orb of the Cywir elders',
-            color: 'rgba(154, 128, 154, 0.5)',
+            color: 'rgba(154, 128, 154, 0.7)',
             data: [[36, 100000], [36, 100000], [36, 50000], [36, 250000], [36, 275000]]
         },
         {
             name: 'Pernix body',
-            color: 'rgba(152, 129, 156, 0.5)',
+            color: 'rgba(152, 129, 156, 0.7)',
             data: [[37, 100000], [37, 100000], [37, 50000], [37, 250000], [37, 275000]]
         },
         {
             name: 'Pernix boots',
-            color: 'rgba(150, 131, 158, 0.5)',
+            color: 'rgba(150, 131, 158, 0.7)',
             data: [[38, 100000], [38, 100000], [38, 50000], [38, 250000], [38, 275000]]
         },
         {
             name: 'Pernix chaps',
-            color: 'rgba(148, 132, 160, 0.5)',
+            color: 'rgba(148, 132, 160, 0.7)',
             data: [[39, 100000], [39, 100000], [39, 50000], [39, 250000], [39, 275000]]
         },
         {
             name: 'Pernix cowl',
-            color: 'rgba(146, 133, 162, 0.5)',
+            color: 'rgba(146, 133, 162, 0.7)',
             data: [[40, 100000], [40, 100000], [40, 50000], [40, 250000], [40, 275000]]
         },
         {
             name: 'Pernix gloves',
-            color: 'rgba(144, 135, 164, 0.5)',
+            color: 'rgba(144, 135, 164, 0.7)',
             data: [[41, 100000], [41, 100000], [41, 50000], [41, 250000], [41, 275000]]
         },
         {
             name: 'Shadow glaive',
-            color: 'rgba(142, 136, 166, 0.5)',
+            color: 'rgba(142, 136, 166, 0.7)',
             data: [[42, 100000], [42, 100000], [42, 50000], [42, 250000], [42, 275000]]
         },
         {
             name: 'Torva boots',
-            color: 'rgba(140, 137, 168, 0.5)',
+            color: 'rgba(140, 137, 168, 0.7)',
             data: [[43, 100000], [43, 100000], [43, 50000], [43, 250000], [43, 275000]]
         },
         {
             name: 'Torva full helm',
-            color: 'rgba(138, 138, 170, 0.5)',
+            color: 'rgba(138, 138, 170, 0.7)',
             data: [[44, 100000], [44, 100000], [44, 50000], [44, 250000], [44, 275000]]
         },
         {
             name: 'Torva gloves',
-            color: 'rgba(136, 140, 172, 0.5)',
+            color: 'rgba(136, 140, 172, 0.7)',
             data: [[45, 100000], [45, 100000], [45, 50000], [45, 250000], [45, 275000]]
         },
         {
             name: 'Torva platebody',
-            color: 'rgba(134, 141, 174, 0.5)',
+            color: 'rgba(134, 141, 174, 0.7)',
             data: [[46, 100000], [46, 100000], [46, 50000], [46, 250000], [46, 275000]]
         },
         {
             name: 'Torva platelegs',
-            color: 'rgba(132, 142, 176, 0.5)',
+            color: 'rgba(132, 142, 176, 0.7)',
             data: [[47, 100000], [47, 100000], [47, 50000], [47, 250000], [47, 275000]]
         },
         {
             name: 'Virtus boots',
-            color: 'rgba(130, 144, 178, 0.5)',
+            color: 'rgba(130, 144, 178, 0.7)',
             data: [[48, 100000], [48, 100000], [48, 50000], [48, 250000], [48, 275000]]
         },
         {
             name: 'Virtus gloves',
-            color: 'rgba(128, 145, 180, 0.5)',
+            color: 'rgba(128, 145, 180, 0.7)',
             data: [[49, 100000], [49, 100000], [49, 50000], [49, 250000], [49, 275000]]
         },
         {
             name: 'Virtus mask',
-            color: 'rgba(126, 146, 182, 0.5)',
+            color: 'rgba(126, 146, 182, 0.7)',
             data: [[50, 100000], [50, 100000], [50, 50000], [50, 250000], [50, 275000]]
         },
         {
             name: 'Virtus robe legs',
-            color: 'rgba(124, 148, 184, 0.5)',
+            color: 'rgba(124, 148, 184, 0.7)',
             data: [[51, 100000], [51, 100000], [51, 50000], [51, 250000], [51, 275000]]
         },
         {
             name: 'Virtus robe top',
-            color: 'rgba(122, 149, 186, 0.5)',
+            color: 'rgba(122, 149, 186, 0.7)',
             data: [[52, 100000], [52, 100000], [52, 50000], [52, 250000], [52, 275000]]
         },
         {
             name: 'Wand of the Cywir elders',
-            color: 'rgba(120, 150, 188, 0.5)',
+            color: 'rgba(120, 150, 188, 0.7)',
             data: [[53, 100000], [53, 100000], [53, 50000], [53, 250000], [53, 275000]]
         },
         {
             name: 'Ward of subjugation',
-            color: 'rgba(119, 152, 191, 0.5)',
+            color: 'rgba(119, 152, 191, 0.7)',
             data: [[54, 100000], [54, 100000], [54, 50000], [54, 250000], [54, 275000]]
         }
     ]
