--- a/dashboard/webapp/templates/webapp/index.html
+++ b/dashboard/webapp/templates/webapp/index.html
@@ -80,11 +80,11 @@
 <footer class="footer">
     <p>© AIOFlipper by Skagoo. All rights reserved.</p>
 
-    <ul class="nav footer__nav">
-        <a class="nav-link" href="https://github.com/">Github</a>
+    <!-- <ul class="nav footer__nav">
+        <a class="nav-link" href="https://github.com/"><i class="zmdi zmdi-github"></i></a>
 
-        <a class="nav-link" href="https://stackoverflow.com/users/5530975/s-van-den-wyngaert">Stack Overflow</a>
-    </ul>
+        <a class="nav-link" href="https://stackoverflow.com/users/5530975/s-van-den-wyngaert"><i class="zmdi zmdi-stackoverflow"></i></a>
+    </ul> -->
 </footer>
 {% endblock %}
 
@@ -99,11 +99,9 @@
 <script src="/static/highcharts/themes/dark-unica.js"></script>
 <script src="/static/highstock/modules/stock.js"></script>
 <script src="/static/highstock/themes/dark-unica.js"></script>
-<!-- /Highcharts -->
 
-<!-- Demo data -->
-<script src="/static/js/demo_data.js"></script>
-<!-- /Demo data -->
+<script src="/static/highcharts/highcharts-more.js"></script>
+<!-- /Highcharts -->
 
 <!-- Custom Scripts -->
 <script src="/static/js/custom.js"></script>
