--- a/dashboard/webapp/templates/webapp/base.html
+++ b/dashboard/webapp/templates/webapp/base.html
@@ -45,12 +45,12 @@
                 </div>
 
                 <div class="logo hidden-sm-down">
-                    <h1><a href="index.html">AIOFlipper</a></h1>
+                    <h1><a href="/">AIOFlipper</a></h1>
                 </div>
 
                 <form class="search">
                     <div class="search__inner">
-                        <input type="text" class="search__text" placeholder="Search for people, files, documents...">
+                        <input type="text" class="search__text" placeholder="Search for items, accounts, documents...">
                         <i class="zmdi zmdi-search search__helper" data-sa-action="search-close"></i>
                     </div>
                 </form>
@@ -78,74 +78,30 @@
                             <div class="listview listview--hover">
                                 <div class="listview__scroll scrollbar-inner">
                                     <a href="" class="listview__item">
-                                        <img src="/static/demo/img/profile-pics/1.jpg" class="listview__img" alt="">
-
                                         <div class="listview__content">
-                                            <div class="listview__heading">David Belle</div>
-                                            <p>Cum sociis natoque penatibus et magnis dis parturient montes</p>
+                                            <div class="listview__heading">Aderared</div>
+                                            <p>Membership will expire in 34 hours.</p>
                                         </div>
                                     </a>
 
                                     <a href="" class="listview__item">
-                                        <img src="/static/demo/img/profile-pics/2.jpg" class="listview__img" alt="">
-
                                         <div class="listview__content">
-                                            <div class="listview__heading">Jonathan Morris</div>
-                                            <p>Nunc quis diam diamurabitur at dolor elementum, dictum turpis vel</p>
+                                            <div class="listview__heading">Gworeg</div>
+                                            <p>Membership will expire in 16 hours.</p>
                                         </div>
                                     </a>
 
                                     <a href="" class="listview__item">
-                                        <img src="/static/demo/img/profile-pics/3.jpg" class="listview__img" alt="">
-
                                         <div class="listview__content">
-                                            <div class="listview__heading">Fredric Mitchell Jr.</div>
-                                            <p>Phasellus a ante et est ornare accumsan at vel magnauis blandit turpis at augue ultricies</p>
+                                            <div class="listview__heading">HipHipHipKip</div>
+                                            <p>Membership will expire in 28 hours.</p>
                                         </div>
                                     </a>
 
                                     <a href="" class="listview__item">
-                                        <img src="/static/demo/img/profile-pics/4.jpg" class="listview__img" alt="">
-
                                         <div class="listview__content">
-                                            <div class="listview__heading">Glenn Jecobs</div>
-                                            <p>Ut vitae lacus sem ellentesque maximus, nunc sit amet varius dignissim, dui est consectetur neque</p>
-                                        </div>
-                                    </a>
-
-                                    <a href="" class="listview__item">
-                                        <img src="/static/demo/img/profile-pics/5.jpg" class="listview__img" alt="">
-
-                                        <div class="listview__content">
-                                            <div class="listview__heading">Bill Phillips</div>
-                                            <p>Proin laoreet commodo eros id faucibus. Donec ligula quam, imperdiet vel ante placerat</p>
-                                        </div>
-                                    </a>
-
-                                    <a href="" class="listview__item">
-                                        <img src="/static/demo/img/profile-pics/1.jpg" class="listview__img" alt="">
-
-                                        <div class="listview__content">
-                                            <div class="listview__heading">David Belle</div>
-                                            <p>Cum sociis natoque penatibus et magnis dis parturient montes</p>
-                                        </div>
-                                    </a>
-
-                                    <a href="" class="listview__item">
-                                        <img src="/static/demo/img/profile-pics/2.jpg" class="listview__img" alt="">
-
-                                        <div class="listview__content">
-                                            <div class="listview__heading">Jonathan Morris</div>
-                                            <p>Nunc quis diam diamurabitur at dolor elementum, dictum turpis vel</p>
-                                        </div>
-                                    </a>
-
-                                    <a href="" class="listview__item">
-                                        <img src="/static/demo/img/profile-pics/3.jpg" class="listview__img" alt="">
-
-                                        <div class="listview__content">
-                                            <div class="listview__heading">Fredric Mitchell Jr.</div>
-                                            <p>Phasellus a ante et est ornare accumsan at vel magnauis blandit turpis at augue ultricies</p>
+                                            <div class="listview__heading">WM MW</div>
+                                            <p>Membership will expire in 19 hours.</p>
                                         </div>
                                     </a>
                                 </div>
@@ -181,118 +137,21 @@
                 <div class="scrollbar-inner">
                    <!-- Sidebar Contents -->
                     <ul class="navigation">
-                        <li class="navigation__active"><a href="index.html"><i class="zmdi zmdi-home"></i> Home</a></li>
 
-                        <li class="navigation__sub @@variantsactive">
-                            <a href=""><i class="zmdi zmdi-view-week"></i> Variants</a>
+                        <li class="navigation__active"><a href="/"><i class="zmdi zmdi-home"></i> Home</a></li>
 
-                            <ul>
-                                <li class="@@sidebaractive"><a href="hidden-sidebar.html">Hidden Sidebar</a></li>
-                                <li class="@@boxedactive"><a href="boxed-layout.html">Boxed Layout</a></li>
-                                <li class="@@hiddensidebarboxedactive"><a href="hidden-sidebar-boxed-layout.html">Boxed Layout with Hidden Sidebar</a></li>
-                            </ul>
-                        </li>
+                        <li class="@@exchangechartsactive"><a href="/"><i class="zmdi zmdi-trending-up"></i> Exchange charts</a></li>
 
-                        <li class="@@typeactive"><a href="typography.html"><i class="zmdi zmdi-format-underlined"></i> Typography</a></li>
-
-                        <li class="@@widgetactive"><a href="widgets.html"><i class="zmdi zmdi-widgets"></i> Widgets</a></li>
 
                         <li class="navigation__sub @@tableactive">
                             <a href=""><i class="zmdi zmdi-view-list"></i> Tables</a>
 
                             <ul>
-                                <li class="@@normaltableactive"><a href="html-table.html">HTML Table</a></li>
-                                <li class="@@datatableactive"><a href="data-table.html">Data Table</a></li>
+                                <li class="@@normaltableactive"><a href="">Accounts</a></li>
+                                <li class="@@datatableactive"><a href="">Items</a></li>
                             </ul>
                         </li>
 
-                        <li class="navigation__sub @@formactive">
-                            <a href=""><i class="zmdi zmdi-collection-text"></i> Forms</a>
-
-                            <ul>
-                                <li class="@@formelementactive"><a href="form-elements.html">Basic Form Elements</a></li>
-                                <li class="@@formcomponentactive"><a href="form-components.html">Form Components</a></li>
-                                <li class="@@formvalidationactive"><a href="form-validation.html">Form Validation</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="navigation__sub @@uiactive">
-                            <a href=""><i class="zmdi zmdi-swap-alt"></i> User Interface</a>
-
-                            <ul>
-                                <li class="@@colorsactive"><a href="colors.html">Colors</a></li>
-                                <li class="@@cssanimationsactive"><a href="css-animations.html">CSS Animations</a></li>
-                                <li class="@@buttonsactive"><a href="buttons.html">Buttons</a></li>
-                                <li class="@@iconsactive"><a href="icons.html">Icons</a></li>
-                                <li class="@@listviewactive"><a href="listview.html">Listview</a></li>
-                                <li class="@@toolbarsactive"><a href="toolbars.html">Toolbars</a></li>
-                                <li class="@@cardsactive"><a href="cards.html">Cards</a></li>
-                                <li class="@@alertactive"><a href="alerts.html">Alerts</a></li>
-                                <li class="@@badgesactive"><a href="badges.html">Badges</a></li>
-                                <li class="@@breadcrumbsactive"><a href="breadcrumbs.html">Bredcrumbs</a></li>
-                                <li class="@@jumbotronactive"><a href="jumbotron.html">Jumbotron</a></li>
-                                <li class="@@navsactive"><a href="navs.html">Navs</a></li>
-                                <li class="@@paginationactive"><a href="pagination.html">Pagination</a></li>
-                                <li class="@@progressactive"><a href="progress.html">Progress</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="navigation__sub @@componentsactive">
-                            <a href=""><i class="zmdi zmdi-group-work"></i> Javascript Components</a>
-
-                            <ul class="navigation__sub">
-                                <li class="@@carouselactive"><a href="carousel.html">Carousel</a></li>
-                                <li class="@@collapseactive"><a href="collapse.html">Collapse</a></li>
-                                <li class="@@dropdownsactive"><a href="dropdowns.html">Dropdowns</a></li>
-                                <li class="@@modalsactive"><a href="modals.html">Modals</a></li>
-                                <li class="@@popoveractive"><a href="popover.html">Popover</a></li>
-                                <li class="@@tabsactive"><a href="tabs.html">Tabs</a></li>
-                                <li class="@@tooltipsactive"><a href="tooltips.html">Tooltips</a></li>
-                                <li class="@@notificationsactive"><a href="notifications-alerts.html">Notifications & Alerts</a></li>
-                                <li class="@@treeactive"><a href="treeview.html">Tree View</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="navigation__sub @@chartsactive">
-                            <a href=""><i class="zmdi zmdi-trending-up"></i> Charts</a>
-
-                            <ul>
-                                <li class="@@flotchartsactive"><a href="flot-charts.html">Flot</a></li>
-                                <li class="@@otherchartsactive"><a href="other-charts.html">Other Charts</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="@@calendaractive"><a href="calendar.html"><i class="zmdi zmdi-calendar"></i> Calendar</a></li>
-
-                        <li class="@@photogalleryactive"><a href="photo-gallery.html"><i class="zmdi zmdi-image"></i> Photo Gallery</a></li>
-
-                        <li class="navigation__sub @@samplepagesactive">
-                            <a href=""><i class="zmdi zmdi-collection-item"></i> Sample Pages</a>
-
-                            <ul>
-                                <li class="@@profileactive"><a href="profile-about.html">Profile</a></li>
-                                <li class="@@messagesactive"><a href="messages.html">Messages</a></li>
-                                <li class="@@contactsactive"><a href="contacts.html">Contacts</a></li>
-                                <li class="@@newcontactsactive"><a href="new-contact.html">New Contact</a></li>
-                                <li class="@@groupsactive"><a href="groups.html">Groups</a></li>
-                                <li class="@@pricingtablesactive"><a href="pricing-tables.html">Pricing Tables</a></li>
-                                <li class="@@invoiceactive"><a href="invoice.html">Invoice</a></li>
-                                <li class="@@todoactive"><a href="todo-lists.html">Todo Lists</a></li>
-                                <li class="@@notesactive"><a href="notes.html">Notes</a></li>
-                                <li class="@@searchresultsactive"><a href="search-results.html">Search Results</a></li>
-                                <li class="@@issuesactive"><a href="issue-tracker.html">Issues Tracker</a></li>
-                                <li class="@@faqactive"><a href="faq.html">FAQ</a></li>
-                                <li class="@@teamactive"><a href="team.html">Team</a></li>
-                                <li class="@@blogactive"><a href="blog.html">Blog</a></li>
-                                <li class="@@blogdetailactive"><a href="blog-detail.html">Blog Detail</a></li>
-                                <li class="@@qaactive"><a href="questions-answers.html">Questions & Answers</a></li>
-                                <li class="@@qadetailactive"><a href="questions-answers-details.html">Questions & Answers Details</a></li>
-                                <li class="@@loginactive"><a href="login.html">Login & SignUp</a></li>
-                                <li class="@@lockscreenactive"><a href="lockscreen.html">Lockscreen</a></li>
-                                <li class="@@lockscreenactive"><a href="404.html">404</a></li>
-                                <li class="@@emptyactive"><a href="empty.html">Empty Page</a></li>
-                            </ul>
-                        </li>
                     </ul>
                    <!-- /Sidebar Contents -->
                 </div>
@@ -312,6 +171,7 @@
                     <a href="" class="themes__item" data-sa-value="8"><img src="/static/img/bg/8.jpg" alt=""></a>
                     <a href="" class="themes__item" data-sa-value="9"><img src="/static/img/bg/9.jpg" alt=""></a>
                     <a href="" class="themes__item" data-sa-value="10"><img src="/static/img/bg/10.jpg" alt=""></a>
+                    <a href="" class="themes__item" data-sa-value="11"><img src="/static/img/bg/11.jpg" alt=""></a>
                 </div>
             </div>
             <!-- /Themes -->
