--- a/dashboard/webapp/templates/webapp/index.html
+++ b/dashboard/webapp/templates/webapp/index.html
@@ -11,8 +11,8 @@
 <div class="row quick-stats">
     <div class="col-sm-6 col-md-3">
         <div class="quick-stats__item">
-            <div class="quick-stats__info">
-                <h2>2867 M</h2>
+            <div class="quick-stats__info" id="quickstats-widget-total-value">
+                <h2>Loading..</h2>
                 <small>Total Value</small>
             </div>
 
@@ -22,8 +22,8 @@
 
     <div class="col-sm-6 col-md-3">
         <div class="quick-stats__item">
-            <div class="quick-stats__info">
-                <h2>1280 M</h2>
+            <div class="quick-stats__info" id="quickstats-widget-cash-value">
+                <h2>Loading..</h2>
                 <small>Cash Value</small>
             </div>
 
@@ -33,8 +33,8 @@
 
     <div class="col-sm-6 col-md-3">
         <div class="quick-stats__item">
-            <div class="quick-stats__info">
-                <h2>1586 M</h2>
+            <div class="quick-stats__info" id="quickstats-widget-items-value">
+                <h2>Loading..</h2>
                 <small>Items Value</small>
             </div>
 
@@ -44,8 +44,8 @@
 
     <div class="col-sm-6 col-md-3">
         <div class="quick-stats__item">
-            <div class="quick-stats__info">
-                <h2>1213</h2>
+            <div class="quick-stats__info" id="quickstats-widget-sales-today">
+                <h2>Loading..</h2>
                 <small>Sales Today</small>
             </div>
 
