Add title on dashboard page

--- a/dashboard/webapp/templates/webapp/index.html
+++ b/dashboard/webapp/templates/webapp/index.html
@@ -2,6 +2,8 @@
 {% load humanize %}
 
 {% block header %}
+<title>AIOFlipper |Dashboard</title>
+
 <link rel="stylesheet" href="/static/scss/inc/widgets/_quick-stats.scss">
 {% endblock %}
 
