--- a/dashboard/webapp/templates/webapp/base.html
+++ b/dashboard/webapp/templates/webapp/base.html
@@ -5,6 +5,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+        <link rel="icon" href="/static/img/favicon.png">
+
         <!-- Vendor styles -->
         <link rel="stylesheet" href="/static/vendors/bower_components/material-design-iconic-font/dist/css/material-design-iconic-font.min.css">
         <link rel="stylesheet" href="/static/vendors/bower_components/animate.css/animate.min.css">
