Add Items page with dynamic data and clippboard func

--- a/dashboard/webapp/templates/webapp/base.html
+++ b/dashboard/webapp/templates/webapp/base.html
@@ -150,7 +150,7 @@
 
                             <ul>
                                 <li class="@@normaltableactive"><a href="">Accounts</a></li>
-                                <li class="@@datatableactive"><a href="">Items</a></li>
+                                <li class="@@datatableactive"><a href="/tables/items/">Items</a></li>
                             </ul>
                         </li>
 
@@ -239,13 +239,15 @@
         <script src="/static/vendors/bower_components/jquery-scrollLock/jquery-scrollLock.min.js"></script>
         <!-- /Vendors -->
 
-        <!-- App functions -->
-        <script src="/static/js/app.min.js"></script>
-        <!-- /Javascript -->
-
         <!-- Page specific scripts -->
         {% block scripts %}
         {% endblock %}
         <!-- /Page specific scripts -->
+
+        <!-- App functions -->
+        <script src="/static/js/app.min.js"></script>
+        <!-- /App functions -->
+        <!-- /Javascript -->
+
     </body>
 </html>
