--- a/dashboard/webapp/templates/webapp/base.html
+++ b/dashboard/webapp/templates/webapp/base.html
@@ -144,15 +144,9 @@
 
                         <li class="@@exchangechartsactive"><a href="/"><i class="zmdi zmdi-trending-up"></i> Exchange charts</a></li>
 
+                        <li class="@@accountsactive"><a href="/"><i class="zmdi zmdi-accounts"></i> Accounts</a></li>
 
-                        <li class="navigation__sub @@tableactive">
-                            <a href=""><i class="zmdi zmdi-view-list"></i> Tables</a>
-
-                            <ul>
-                                <li class="@@normaltableactive"><a href="">Accounts</a></li>
-                                <li class="@@datatableactive"><a href="/tables/items/">Items</a></li>
-                            </ul>
-                        </li>
+                        <li class="@@itemsactive"><a href="/items/"><i class="zmdi zmdi-label-alt"></i> Items</a></li>
 
                     </ul>
                     
