--- a/dashboard/webapp/templates/webapp/items.html
+++ b/dashboard/webapp/templates/webapp/items.html
@@ -73,6 +73,6 @@
 <!-- /Notification -->
 
 <!-- Custom Scripts -->
-<script src="/static/js/tables/items/items.js"></script>
+<script src="/static/js/items.js"></script>
 <!-- /Custom Scripts -->
 {% endblock %}
