Add accounts page with dyanamic data

--- a/dashboard/webapp/templates/webapp/base.html
+++ b/dashboard/webapp/templates/webapp/base.html
@@ -144,7 +144,7 @@
 
                         <li class="@@exchangechartsactive"><a href="/"><i class="zmdi zmdi-trending-up"></i> Exchange charts</a></li>
 
-                        <li class="@@accountsactive"><a href="/"><i class="zmdi zmdi-accounts"></i> Accounts</a></li>
+                        <li class="@@accountsactive"><a href="/accounts/"><i class="zmdi zmdi-accounts"></i> Accounts</a></li>
 
                         <li class="@@itemsactive"><a href="/items/"><i class="zmdi zmdi-label-alt"></i> Items</a></li>
 
