--- a/dashboard/webapp/static/css/custom.css
+++ b/dashboard/webapp/static/css/custom.css
@@ -11,3 +11,25 @@
   /*background: rgba(0, 0, 0, 0.5);*/
   background-color: rgba(194, 194, 194, 0.5);
 }
+
+.groups__img {
+  width: 13.5rem !important;
+  display: inline-block;
+}
+
+@media (max-width: 575px) {
+  .groups {
+    margin: 0 -5px;
+  }
+  .groups [class*=col-] {
+    padding: 0 5px;
+  }
+  .groups .groups__item {
+    margin-bottom: 10px;
+  }
+
+  .groups__img {
+    width: 4.5rem;
+    display: inline-block;
+  }
+}
