--- a/dashboard/webapp/templates/webapp/accounts.html
+++ b/dashboard/webapp/templates/webapp/accounts.html
@@ -5,6 +5,8 @@
 <title>AIOFlipper |Tables - Items</title>
 
 <link rel="stylesheet" href="/static/scss/inc/vendor-overrides/_data-tables.scss">
+
+
 {% endblock %}
 
 {% block content %}
@@ -31,7 +33,7 @@
     <div class="col-xl-3 col-lg-3 col-sm-4 col-6">
         <div class="groups__item">
             <a href="/accounts/{{ account.username }}">
-                <div class="groups__img" style="width: 13.5rem !important;">
+                <div class="groups__img">
                     {% for slot in account.slots %}
                     {% if slot.slotState == 'buying' or slot.slotState == 'complete buying' %}
                     <img class="avatar-img" src="/static/img/items/{{ slot.item.staticImageUrl }}" alt=""
