--- a/dashboard/webapp/templates/webapp/index.html
+++ b/dashboard/webapp/templates/webapp/index.html
@@ -4,6 +4,11 @@
 {% block header %}
 <title>AIOFlipper |Dashboard</title>
 
+<!-- DatePicker -->
+<link rel="stylesheet" href="/static/scss/inc/vendor-overrides/_flatpickr.scss">
+<link rel="stylesheet" href="/static/vendors/bower_components/flatpickr/dist/flatpickr.min.css">
+<!-- /DatePicker -->
+
 <link rel="stylesheet" href="/static/scss/inc/widgets/_quick-stats.scss">
 {% endblock %}
 
@@ -104,6 +109,10 @@
 
 <script src="/static/highcharts/highcharts-more.js"></script>
 <!-- /Highcharts -->
+
+<!-- DatePicker -->
+<script src="/static/vendors/bower_components/flatpickr/dist/flatpickr.min.js"></script>
+<!-- /DatePicker -->
 
 <!-- Custom Scripts -->
 <script src="/static/js/custom.js"></script>
